components/Articles/Articles.scss
@use "assets/css/main/colors" as *;
@use "assets/css/main/breakpoints" as *;
@use "assets/css/main/main" as *;

.container {
    display: flex;

    @include mobile {
        margin-left: -5em;
    }

    &__columns {
    width: 100%;
    margin-bottom: 0em;

        .content {
            position: relative;
            display: flex;
            flex-flow: column nowrap;
            width: 100%;
            page-break-inside: avoid;
            margin-bottom: 5em;
            flex-direction: row;
            align-items: center;
            justify-content: space-between;
            align-content: stretch;
            flex-wrap: nowrap;

            @include mobile {
                flex-direction: column;
                width: 100vw;
                margin-bottom: 7em;
            }

            &:nth-child(2n) {
                flex-direction: row-reverse;

                @include mobile {
                    flex-direction: column;
                }

                .teaser__box {
                    left: 0px;
                    height: auto;

                    @include mobile {
                        left: unset;
                    }
                }

                .subtext {
                    position: absolute;
                    left: 10%;

                    @include mobile {
                        left: unset;
                    }
                }
            }

            &:last-child {
                flex-direction: column-reverse;
                align-items: center;
                margin-bottom: 40px;

                @include mobile {
                    margin-bottom: 100px;
                }

                .teaser__box {
                    height: auto;
                    left: 50%;
                    margin-left: -275px;
                    bottom: -40px;

                    @include mobile {
                        left: unset;
                        margin-left: unset;
                        bottom: -100px;
                    }
                }

                img {
                    width: 100%;
                    padding-top: 0px;
                }
            }
        }
    } 
    
    .subtext {
        font-size: 10px;
        color: #989898;

        display: flex;
        justify-content: flex-start;
        align-items: center;

        position: absolute;
        top: 605px;
        width: 90%;
        height: 22px;

        background-image: url('~assets/images/info_icon.svg');
        background-repeat: no-repeat;
        padding-left: 30px;  /* width of the image plus a little extra padding */
        // display: block;  /* may not need this, but I've found I do */

        @include mobile {
            width: calc(100vw - 30px);
            align-items: unset;
            top: 425px;
        }

        &::v-deep p {
            margin-top: 2px;
            line-height: 12px;

            @include mobile {
                margin-top: 6px;
            }
        }
    }
}

.teaser__box {
    background: $accent;
    position: relative;
    right: 0px;
    height: auto;
    width: 550px;
    position: absolute;
    padding: 60px 100px;
    color: $white;

    @include mobile {
        right: 30px;
        padding: 30px;
        width: calc(100vw - 100px);
    }
}

h3 {
    margin-top: 0.5em;
    margin-bottom: 0.75em;
}

img {
    width: 90%;
    height: 600px;
    object-fit: cover;

    @include mobile {
        width: 100%;
        padding-top: 100px;
        height: 420px;
    }
}

